<resources>
    <string name="app_name">Fake Store</string>
    <string name="login">Connexion</string>
    <string name="signup_underlined"><u>S\'inscrire</u></string>
    <string name="password">Mot de passe</string>
    <string name="username">Username</string>
    <string name="you_d_ont_have_account_question">Vous n\'avez pas de compte ?</string>
    <string name="signup">S\'inscrire</string>
    <string name="email">E-mail</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="confirm_password">Confirmation de mot de passe</string>
    <string name="phone">Télèphone</string>
    <string name="save">Enregistrer</string>
</resources>